--- a/style.css
+++ b/style.css
@@ -184,6 +184,11 @@ h3 {
   margin: 0.1rem;
   font-family: "Glegoo", serif;
   border: solid 2px var(--main-color);
+  transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+}
+.buttons button:hover {
+  transform: translate(2px, 4px);
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.907);
 }
 
 .btn-main {
@@ -255,6 +260,9 @@ h3 {
 }
 .uslugi .uslugi-grid .uslugi-items:hover .item-1 h2 {
   color: var(--main-color);
+}
+.uslugi .uslugi-grid .uslugi-items:hover .item-2 video {
+  filter: saturate(1.2);
 }
 .uslugi .uslugi-grid .uslugi-items .item-1 {
   background-image: linear-gradient(to top right, var(--secondary-color), rgb(0, 0, 0));
@@ -359,9 +367,11 @@ h3 {
   overflow: hidden;
   border-radius: 1rem;
   cursor: pointer;
+  filter: saturate(0.4);
 }
 .galeria .gallery-images .gallery-img img:hover {
   transform: scale(1.03);
+  filter: saturate(1.2);
 }
 .galeria .gallery-images .span1 {
   grid-column: span 2;
@@ -760,8 +770,7 @@ h3 {
   }
   .buttons button {
     padding: 1.2rem;
-    font-size: 1rem;
-    border-radius: 0.5rem;
+    margin: 0 0.5rem;
   }
 }
 @media (min-width: 1300px) {
