--- a/style.scss
+++ b/style.scss
@@ -8,7 +8,7 @@ html,body{
     
     font-family: 'Glegoo', serif;
     overflow-x: hidden;
-   position: relative;
+    position: relative;
     height: 100%;
 }
 
@@ -198,16 +198,24 @@ h3{
     margin: 0.1rem;
     font-family: 'Glegoo', serif;
     border: solid 2px var(--main-color);
+    transition: 0.2s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    &:hover {
+        transform:translate(2px,4px);       
+        box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.907);
+    }
 }
 .btn-main{
     background-color: var(--main-color);
     color: var(--secondary-color);
     cursor: pointer;
+   
+    
 }
 .btn-sec{
     background-color: var(--secondary-color);
     color: white;
     cursor: pointer;
+    
 }
 
 .hero{
@@ -271,6 +279,11 @@ h3{
             h2{
                 color: var(--main-color);
             }
+            }
+            .item-2{
+                video{
+                filter: saturate(1.2);
+                }
             }
         } 
         
@@ -385,17 +398,15 @@ h3{
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
-                -webkit-transform: scale(1);
                 transform: scale(1);
-                -webkit-transition: .2s ease-in-out;
                 transition: .2s ease-in-out;
                 overflow: hidden;
                 border-radius: 1rem;
                 cursor: pointer;
+                filter: saturate(0.4);
                 &:hover {
-                    -webkit-transform: scale(1.03);
                     transform: scale(1.03);
-                    
+                    filter: saturate(1.2);
                     }
             }
             
@@ -851,10 +862,8 @@ h3{
         }
         
         .buttons button{
-            padding: 1.2rem;
-            font-size: 1rem;
-            border-radius: 0.5rem;
-            
+            padding: 1.2rem; 
+            margin: 0 0.5rem;         
         }
         
     }
