--- a/style.css
+++ b/style.css
@@ -251,6 +251,7 @@ h3 {
   justify-content: center;
   border-radius: 1rem;
   transition: 0.3s ease;
+  min-height: 200px;
 }
 .uslugi .uslugi-grid .uslugi-items:hover {
   transform: translateY(-3px);
@@ -365,7 +366,6 @@ h3 {
   transform: scale(1);
   transition: 0.2s ease-in-out;
   overflow: hidden;
-  border-radius: 1rem;
   cursor: pointer;
   filter: saturate(0.4);
 }
@@ -551,11 +551,6 @@ h3 {
   }
   .front-page {
     padding-top: 2%;
-    min-height: 100vh;
-    color: white;
-  }
-  .front-page img {
-    filter: saturate(1.5);
   }
   nav {
     border-radius: 0;
