--- a/style.scss
+++ b/style.scss
@@ -162,7 +162,7 @@ h3{
     min-height: 100vh;
     color: white;
     img{
-        filter: saturate(1.5);
+        filter: saturate(1.5) ;
     }
 }
 
@@ -272,6 +272,8 @@ h3{
         justify-content: center;
         border-radius: 1rem;
         transition: 0.3s ease;
+
+        min-height: 200px;
         &:hover {
             transform:translateY(-3px);
             .item-1{
@@ -401,7 +403,6 @@ h3{
                 transform: scale(1);
                 transition: .2s ease-in-out;
                 overflow: hidden;
-                border-radius: 1rem;
                 cursor: pointer;
                 filter: saturate(0.4);
                 &:hover {
@@ -619,11 +620,7 @@ h3{
        }
         .front-page{
             padding-top: 2%;
-            min-height: 100vh;
-            color: white;
-            img{
-                filter: saturate(1.5);
-            }
+            
         }
         
         nav{
