--- a/style.css
+++ b/style.css
@@ -315,8 +315,7 @@ h3 {
   background-color: var(--main-color);
   display: grid;
   grid-template-columns: 1fr;
-  grid-gap: 2rem;
-  height: 80vh;
+  grid-gap: 1rem;
 }
 .omnie .our-story p {
   line-height: 150%;
@@ -336,6 +335,7 @@ h3 {
 .omnie .omnie-img img {
   width: 100%;
   height: 100%;
+  min-height: 15rem;
   border-radius: 1rem;
   box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.707);
   border: solid 2px white;
@@ -365,7 +365,6 @@ h3 {
      object-fit: cover;
   transform: scale(1);
   transition: 0.2s ease-in-out;
-  overflow: hidden;
   cursor: pointer;
   filter: saturate(0.4);
 }
