--- a/style.scss
+++ b/style.scss
@@ -348,8 +348,8 @@ h3{
     background-color: var(--main-color);
     display: grid;
     grid-template-columns: 1fr ;
-    grid-gap: 2rem;
-    height: 80vh;
+    grid-gap: 1rem;
+    
 
     .our-story{
     p{
@@ -367,9 +367,11 @@ h3{
         overflow: hidden;
         border-radius: 1rem;
         box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.707);
+        
         img{
         width: 100%;
         height: 100%;
+        min-height: 15rem;
         border-radius: 1rem;
         box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.707);
         border: solid 2px white;
@@ -402,7 +404,7 @@ h3{
                 object-fit: cover;
                 transform: scale(1);
                 transition: .2s ease-in-out;
-                overflow: hidden;
+                
                 cursor: pointer;
                 filter: saturate(0.4);
                 &:hover {
