--- a/style.css
+++ b/style.css
@@ -357,6 +357,7 @@ h3 {
   border: solid 2px var(--main-color);
   border-radius: 1rem;
   box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.707);
+  z-index: 1;
 }
 .galeria .gallery-images .gallery-img img {
   width: 100%;
@@ -365,6 +366,7 @@ h3 {
      object-fit: cover;
   transform: scale(1);
   transition: 0.2s ease-in-out;
+  z-index: -1;
   cursor: pointer;
   filter: saturate(0.4);
 }
