--- a/style.scss
+++ b/style.scss
@@ -397,6 +397,7 @@ h3{
             border: solid 2px var(--main-color);
             border-radius: 1rem;
             box-shadow: 0px 6px 14px rgba(0, 0, 0, 0.707);
+            z-index: 1;
             
             img{
                 width: 100%;
@@ -404,7 +405,7 @@ h3{
                 object-fit: cover;
                 transform: scale(1);
                 transition: .2s ease-in-out;
-                
+                z-index: -1;
                 cursor: pointer;
                 filter: saturate(0.4);
                 &:hover {
