--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ h3 {
 }
 
 .selling-point {
-  margin-top: 30%;
+  margin-top: 30vh;
   text-shadow: 3px 2px 2px rgba(0, 0, 0, 0.727);
   text-align: center;
   border-radius: 0.5rem;
